# third-party-dashboard

./: README.md  requirements.txt  setup.cfg
etc/: thirdpartydashboard.conf.sample
third-party-dashboard/api/: config.py
third-party-dashboard/api/v1/: root_controller.py  v1_controller.py  wmodels.py
third-party-dashboard/db/: models.py
thirdpartydashboard/api/: app.py  config.py
thirdpartydashboard/api/v1/: operator.py  root_controller.py  system.py  v1_controller.py  wmodels.py
thirdpartydashboard/api/v1/search/: impls.py  search_engine.py  sqlalchemy_impl.py
thirdpartydashboard/db/: models.py
thirdpartydashboard/db/api/: base.py  operators.py  systems.py
thirdpartydashboard/db/migration/: cli.py
thirdpartydashboard/db/migration/alembic_migrations/: env.py
thirdpartydashboard/db/migration/alembic_migrations/versions/: 12f5a539f16f_initial_tables.py  28bea6898a5a_create_systems_table.py
thirdpartydashboard/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  log.py
thirdpartydashboard/tasks/: update_systems.py
thirdpartydashboard/worker/: daemon.py
thirdpartydashboard/worker/task/: process_update.py
