[metadata]
name = third-party-dashboard
summary = OpenStack Third Party Dashboard
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Framework :: Pecan/WSME
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    third-party-dashboard
data_files =
    etc/third-party-dashboard =
        etc/third-party-dashboard.conf.sample

[entry_points]
console_scripts =
    third-party-dashboard-api = third-party-dashboard.api.app:start
    third-party-dashboard-subscriber = third-party-dashboard.notifications.subscriber:subscribe
    third-party-dashboard-worker-daemon = third-party-dashboard.worker.daemon:run
    third-party-dashboard-db-manage = third-party-dashboard.db.migration.cli:main
    third-party-dashboard-migrate = third-party-dashboard.migrate.cli:main
third-party-dashboard.worker.task =
    subscription = third-party-dashboard.worker.task.subscription:Subscription
third-party-dashboard.plugin.user_preferences =
