[metadata]
name = thirdpartydashboard
summary = OpenStack Third Party Dashboard
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Framework :: Pecan/WSME
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    thirdpartydashboard
data_files =
    etc/thirdpartydashboard =
        etc/thirdpartydashboard.conf.sample

[entry_points]
console_scripts =
    thirdpartydashboard-api = thirdpartydashboard.api.app:start
    thirdpartydashboard-db-manage = thirdpartydashboard.db.migration.cli:main
    thirdpartydashboard-update-daemon = thirdpartydashboard.worker.daemon:run

